Add redirect to auth pages when not signed in
